--- a/Index.html
+++ b/Index.html
@@ -47,7 +47,10 @@
     <header class="header_area">
         <div class="main-menu">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="#">
+                    <h2 class="title-text mb-0 text-uppercase animated fadeInDown">Hamza</h2>
+                </a>
+                <!-- <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="logo"></a> -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -236,7 +239,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/restaurant.png">
+                                <a href="https://yamiyami.de/hot-deal" target="__blank">
                                     <img src="./img/portfolio/restaurant.png" alt="portfolio-1" class="img-fluid" width="100%">
                                 </a>
                             </div>
@@ -251,7 +254,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item popular latest">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/cobone4me.png">
+                                <a href="https://www.cobone4me.com/" target="__blank">
                                     <img src="./img/portfolio/cobone4me.png" alt="portfolio-2" class="img-fluid" width="100%">
                                 </a>
                             </div>
@@ -266,7 +269,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item popular">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/nch.png">
+                                <a href="https://dev.nationalcoronavirushotline.com/" target="__blank">
                                     <img src="./img/portfolio/nch.png" alt="portfolio-3" class="img-fluid" width="100%">
                                 </a>
                             </div>
@@ -281,7 +284,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/meditibb.png">
+                                <a href="http://app.meditibb.com/login/" target="__blank">
                                     <img src="./img/portfolio/p2.jpg" alt="portfolio-5" class="img-fluid" width="100%">
                                 </a>
                             </div>
@@ -296,7 +299,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item following">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/p3.jpg">
+                                <a href="https://www.thetroutfitter.com/" target="__blank">
                                     <img src="./img/portfolio/p3.jpg" alt="portfolio-8" class="img-fluid" width="100%">
                                 </a>
                             </div>
@@ -311,7 +314,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/rev.png">
+                                <a href="http://html.freethefirst.com/mobileapp/mobileapp.html" target="__blank">
                                     <img src="./img/portfolio/rev.png" alt="portfolio-4" class="img-fluid" width="100%">
                                 </a>
                             </div>
@@ -327,7 +330,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item following">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/p1.jpg">
+                                <a href="https://cdsconnectapp.com/" target="__blank">
                                     <img src="./img/portfolio/p1.jpg" alt="portfolio-5" class="img-fluid" width="100%">
                                 </a>
                             </div>
@@ -481,7 +484,9 @@
         <div class="container" data-aos="fade-up">
             <div class="">
                 <div class="site-logo text-center py-4">
-                    <a href="#"><img src="./img/logo.png" alt="logo"></a>
+                    <a class="footer" href="#">
+                        <h2 class="title-text text-uppercase animated fadeInDown">Hamza</h2>
+                    </a>
                 </div>
                 <div class="social text-center">
                     <h5 class="text-uppercase">Follow me</h5>
