--- a/Index.html
+++ b/Index.html
@@ -108,8 +108,8 @@
 
         <!--  ========================= About Area ==========================  -->
 
-        <section class="about-area" id="about">
-            <div class="container-fluid">
+        <section class="about-area pt-5 mt-5" id="about">
+            <div class="container-fluid pt-5 mt-5">
                 <div class="row">
                     <div class="col-lg-6 col-md-12" data-aos="fade-up">
                         <div class="about-image">
@@ -221,7 +221,7 @@
         <!--  ======================= Project Area =============================  -->
 
         <section class="project-area" id="portfolio">
-            <div class="container">
+            <div class="container mt-5 pt-3">
                 <div class="project-title pb-5">
                     <h1 class="text-uppercase title-h1">Recently Done Project</h1>
                     <h1 class="text-uppercase title-h1">Quality Work</h1>
@@ -421,23 +421,31 @@
                         <div class="first-row row">
                             <div class="col-lg-4 col-md-6 col-sm-6">
                                 <div class="single-brand">
-                                    <h6 class="mb-0">Revolution</h6>
+                                    <a href="http://html.freethefirst.com/mobileapp/mobileapp.html" target="__blank">
+                                        <h6 class="mb-0">Revolution</h6>
+                                    </a>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6">
                                 <div class="single-brand">
-                                    <h6 class="mb-0">Chromovision</h6>
+                                    <a href="" target="__blank">
+                                        <h6 class="mb-0">Chromovision</h6>
+                                    </a>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6">
                                 <div class="single-brand">
-                                    <h6 class="mb-0">Education-system</h6>
+                                    <a href="" target="__blank">
+                                        <h6 class="mb-0">Education-system</h6>
+                                    </a>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6">
                                 <div class="single-brand">
-                                    <h6 class="mb-0">NCH</h6>
-                                </div>
+                                <a href="https://dev.nationalcoronavirushotline.com/" target="__blank">
+                                        <h6 class="mb-0">NCH</h6>
+                                    </a>
+                                    </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6">
                                 <div class="single-brand">
@@ -490,10 +498,7 @@
                 </div>
                 <div class="social text-center">
                     <h5 class="text-uppercase">Follow me</h5>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/hamza-zafar-0a2bab190/" target="__blank"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <div class="copyrights text-center">
                     <p class="para">
