--- a/home.html
+++ b/home.html
@@ -490,13 +490,8 @@
 
     <footer class="footer-area">
         <div class="container" data-aos="fade-up">
-            <div class="">
-                <div class="site-logo text-center py-4">
-                    <a class="footer" href="#">
-                        <h2 class="title-text text-uppercase animated fadeInDown">Hamza</h2>
-                    </a>
-                </div>
-                <div class="social text-center">
+            <div class="pt-5">
+                <div class="social text-center" pt-5>
                     <h5 class="text-uppercase">Follow me</h5>
                     <a href="https://www.linkedin.com/in/hamza-zafar-0a2bab190/" target="__blank"><i class="fab fa-linkedin-in"></i></a>
                 </div>
