--- a/Index.html
+++ b/Index.html
@@ -8,27 +8,27 @@
     <title>Hamza zafar</title>
 
 
-    <!--  Bootstrap css file  -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+<!--    &lt;!&ndash;  Bootstrap css file  &ndash;&gt;-->
+<!--    <link rel="stylesheet" href="assets/css/bootstrap.min.css">-->
 
-    <!--  font awesome icons  -->
-    <link rel="stylesheet" href="assets/css/all.min.css">
+<!--    &lt;!&ndash;  font awesome icons  &ndash;&gt;-->
+<!--    <link rel="stylesheet" href="assets/css/all.min.css">-->
 
 
     <!--  Magnific Popup css file  -->
      <link rel="stylesheet" href="assets/vendor/Magnific-Popup/dist/magnific-popup.css">
 
 
-    <!--  Owl-carousel css file  -->
-    <link rel="stylesheet" href="assets/vendor/owl-carousel/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/vendor/owl-carousel/css/owl.theme.default.min.css">
-    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <script data-ad-client="ca-pub-1374606821325042" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!--    &lt;!&ndash;  Owl-carousel css file  &ndash;&gt;-->
+<!--    <link rel="stylesheet" href="assets/vendor/owl-carousel/css/owl.carousel.min.css">-->
+<!--    <link rel="stylesheet" href="assets/vendor/owl-carousel/css/owl.theme.default.min.css">-->
+<!--    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">-->
+<!--    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">-->
+<!--    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">-->
+<!--    <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">-->
+<!--    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">-->
+<!--    <link href="assets/vendor/aos/aos.css" rel="stylesheet">-->
+<!--  <script data-ad-client="ca-pub-1374606821325042" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
 
 
     <!--  custom css file  -->
@@ -512,33 +512,33 @@
 
     <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
-    <!--  Jquery js file  -->
-    <script src="assets/js/jquery.3.4.1.js"></script>
+<!--    &lt;!&ndash;  Jquery js file  &ndash;&gt;-->
+<!--    <script src="assets/js/jquery.3.4.1.js"></script>-->
 
-    <!--  Bootstrap js file  -->
-    <script src="assets/js/bootstrap.min.js"></script>
+<!--    &lt;!&ndash;  Bootstrap js file  &ndash;&gt;-->
+<!--    <script src="assets/js/bootstrap.min.js"></script>-->
 
-    <!--  isotope js library  -->
-    <script src="assets/vendor/isotope/isotope.min.js"></script>
+<!--    &lt;!&ndash;  isotope js library  &ndash;&gt;-->
+<!--    <script src="assets/vendor/isotope/isotope.min.js"></script>-->
 
-    <!--  Magnific popup script file  -->
-     <script src="assets/vendor/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>
+<!--    &lt;!&ndash;  Magnific popup script file  &ndash;&gt;-->
+<!--     <script src="assets/vendor/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>-->
 
-    <!--  Owl-carousel js file  -->
-    <script src="assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
+<!--    &lt;!&ndash;  Owl-carousel js file  &ndash;&gt;-->
+<!--    <script src="assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>-->
 
-    <!--  custom js file  -->
-    <script src="assets/js/main.js"></script>
-    <!-- <script src="./vendor/jquery/jquery.min.js"></script> -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/jquery-sticky/jquery.sticky.js"></script>
-  <script src="assets/vendor/venobox/venobox.min.js"></script>
-  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="assets/vendor/counterup/counterup.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/js/main.js"></script>
+<!--    &lt;!&ndash;  custom js file  &ndash;&gt;-->
+<!--    <script src="assets/js/main.js"></script>-->
+<!--    &lt;!&ndash; <script src="./vendor/jquery/jquery.min.js"></script> &ndash;&gt;-->
+<!--  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>-->
+<!--  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>-->
+<!--  <script src="assets/vendor/php-email-form/validate.js"></script>-->
+<!--  <script src="assets/vendor/jquery-sticky/jquery.sticky.js"></script>-->
+<!--  <script src="assets/vendor/venobox/venobox.min.js"></script>-->
+<!--      <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>-->
+<!--      <script src="assets/vendor/counterup/counterup.min.js"></script>-->
+<!--      <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>-->
+<!--      <script src="assets/vendor/aos/aos.js"></script>-->
+<!--      <script src="assets/js/main.js"></script>-->
 
 </html>
