--- a/Index.html
+++ b/Index.html
@@ -389,10 +389,11 @@
                 <div class="row text-center">
                     <div class="col-12">
                         <div class="about-title">
-                            <h1 class="text-uppercase title-h1">Client Say about me</h1>
+                            <h1 class="text-uppercase title-h1">What clients say about me</h1>
                             <p class="para">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, deleniti
-                                recusandae. Esse incidunt rem repellendus ab voluptates maxime? Nemo, numquam!
+                                I am very fortunate to have formed excellent partnerships with many of my clients.
+                                And I’ve formed more than just working relationships with them; I have formed true friendships.
+                                Here’s what they’re saying about me.
                             </p>
                         </div>
                     </div>
